--- a/sass/main.sass
+++ b/sass/main.sass
@@ -24,6 +24,7 @@ $blue:      #4da7ee
 
 
 .body
+  margin: 0
   font-family: "Range", "Lucida Grande", "Lucida Sans", sans-serif
   font-size: 14px
   text-align: center
