--- a/css/main.css
+++ b/css/main.css
@@ -15,33 +15,34 @@
 /* line 29, ../sass/main.sass */
 .body {
   margin: 0;
+  background-color: #141414;
   font-family: "Range", "Lucida Grande", "Lucida Sans", sans-serif;
   font-size: 14px;
   text-align: center;
 }
 
-/* line 35, ../sass/main.sass */
+/* line 36, ../sass/main.sass */
 .link {
   display: block;
   width: 100%;
   padding: 1em 0;
   position: absolute;
-  top: 56%;
+  top: 57%;
   color: #44aaee;
   font-size: 16px;
   text-decoration: none;
   -webkit-transition: opacity 2s;
-  -webkit-transition-delay: 2.5s;
-  -moz-transition: opacity 2s 2.5s;
-  -o-transition: opacity 2s 2.5s;
-  transition: opacity 2s 2.5s;
+  -webkit-transition-delay: 3s;
+  -moz-transition: opacity 2s 3s;
+  -o-transition: opacity 2s 3s;
+  transition: opacity 2s 3s;
 }
-/* line 45, ../sass/main.sass */
+/* line 46, ../sass/main.sass */
 .link:hover {
   text-decoration: underline;
 }
 
-/* line 48, ../sass/main.sass */
+/* line 49, ../sass/main.sass */
 .header {
   position: absolute;
   top: 50%;
@@ -55,7 +56,7 @@
   user-select: none;
 }
 
-/* line 58, ../sass/main.sass */
+/* line 59, ../sass/main.sass */
 .title {
   margin-top: -1em;
   font-size: 50px;
@@ -67,25 +68,25 @@
   transition: opacity 2s 2s;
 }
 
-/* line 64, ../sass/main.sass */
+/* line 65, ../sass/main.sass */
 .canvas {
   display: block;
 }
 
-/* line 67, ../sass/main.sass */
-.hide {
+/* line 68, ../sass/main.sass */
+.hidden {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
 }
 
 @media (max-width: 480px) {
-  /* line 71, ../sass/main.sass */
+  /* line 72, ../sass/main.sass */
   .title {
     font-size: 36px;
   }
 }
 @media (max-width: 320px) {
-  /* line 75, ../sass/main.sass */
+  /* line 76, ../sass/main.sass */
   .link {
     top: 54%;
     font-size: 14px;
