--- a/sass/main.sass
+++ b/sass/main.sass
@@ -57,12 +57,15 @@ $blue:      #4ae
 .link
   position: relative
   z-index: 10
+  padding-bottom: 2px
+  border-bottom: 2px solid transparent
   color: $blue
   font-size: 16px
   text-decoration: none
   +animate(fadeIn, 3s, 4s)
+  +transition(border 1s)
   &:hover
-    text-decoration: underline
+    border-bottom-color: $blue
 
 .canvas
   display: block
