Switch Compass +experimental mixing with +animation-duration

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,7 +12,7 @@ $green:     #61c227
 //== Animations
 
 =animate($name: fadeIn, $duration: 1s, $delay: .2s, $function: ease, $mode: both)
-  +experimental(animation, $name $duration $delay $function $mode)
+  +animation-duration(animation, $name $duration $delay $function $mode)
 
 @-webkit-keyframes fadeIn
   0%
